<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
            android:key="video_renderer"
            android:title="@string/renderer"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/video_renderer_options"
            android:entryValues="@array/video_renderer_values"
            android:defaultValue="software"/>

    <ListPreference
            android:key="video_internal_resolution"
            android:title="@string/internal_resolution"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/video_internal_resolution_options"
            android:entryValues="@array/video_internal_resolution_values"
            android:defaultValue="1"/>

    <SwitchPreference
            android:key="enable_threaded_rendering"
            android:title="@string/threaded_rendering"
            android:summary="@string/threaded_rendering_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="true" />

    <ListPreference
            android:key="polygon_multiplier"
            android:title="@string/polygon_multiplier"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/polygon_multiplier_options"
            android:entryValues="@array/polygon_multiplier_values"
            android:defaultValue="1"/>

    <SwitchPreference
            android:key="unlimited_polygons"
            android:title="@string/unlimited_polygons"
            android:summary="@string/unlimited_polygons_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <SwitchPreference
            android:key="high_precision_geometry"
            android:title="@string/high_precision_geometry"
            android:summary="@string/high_precision_geometry_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <ListPreference
            android:key="texture_upscale"
            android:title="@string/texture_upscale"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/texture_upscale_options"
            android:entryValues="@array/texture_upscale_values"
            android:defaultValue="1"/>

    <SwitchPreference
            android:key="oled_blacks"
            android:title="@string/oled_blacks"
            android:summary="@string/oled_blacks_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <SwitchPreference
            android:key="adaptive_colours"
            android:title="@string/adaptive_colours"
            android:summary="@string/adaptive_colours_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <SwitchPreference
            android:key="high_color"
            android:title="@string/high_color"
            android:summary="@string/high_color_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <SwitchPreference
            android:key="better_polygons"
            android:title="@string/better_polygons"
            android:summary="@string/better_polygons_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <SwitchPreference
            android:key="enable_hd_textures"
            android:title="@string/hd_textures"
            android:summary="@string/hd_textures_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <SwitchPreference
            android:key="dump_textures"
            android:title="@string/dump_textures"
            android:summary="@string/dump_textures_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <ListPreference
            android:key="video_filtering"
            android:title="@string/filter"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/video_filtering_options"
            android:entryValues="@array/video_filtering_values"
            android:defaultValue="none"/>

    <ListPreference
            android:key="fps_counter_position"
            android:title="@string/fps_counter_position"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/fps_counter_position_options"
            android:entryValues="@array/fps_counter_position_values"
            android:defaultValue="hidden" />

    <ListPreference
            android:key="dsi_camera_source"
            android:title="@string/dsi_camera_source"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/dsi_camera_source_options"
            android:entryValues="@array/dsi_camera_source_values"
            android:defaultValue="physical_cameras" />

    <me.magnum.melonds.ui.settings.preferences.StoragePickerPreference
            android:key="dsi_camera_static_image"
            android:title="@string/dsi_camera_image"
            android:dependency="dsi_camera_source"
            app:iconSpaceReserved="false"
            app:type="file"
            app:permissions="read"
            app:persistPermissions="true"
            app:mimeType="image/jpeg|image/png" />
</PreferenceScreen>